# fastapi

./: .gitignore  app.py  package.json  pyproject.toml  serverless.yml
